# hydration_system_02

./: .env.example  .gitignore  ARCHITECTURE.md  INTEGRATION_NOTES.md  README.md  alert_engine.py  config.py  docker-compose.yml  hydration_record.py  led_controller.py  observation_button.py  pipeline.py  platform_interaction_classifier.py  platform_interaction_classifier_spec.txt  sensor_reader.py  session_manager.py  test_classifier.py  test_session_manager.py
backend/: Dockerfile  pyproject.toml
backend/app/: alert_engine.py  alerts.py  camgenium.py  config.py  display_driver.py  events.py  generate_sample.py  hydration_record.py  ingest.py  input_buttons.py  led_controller.py  main.py  models.py  observation_button.py  pace_model.py  patient_profile.py  pipeline.py  pubsub.py  queries.py  sensor_reader.py  tasks.py
backend/app/interactions/: __init__.py  classifier.py  registry.py  session.py
backend/app/routes/: admin.py  beds.py  corridor.py  dashboard.py  ingest.py  sse.py
backend/app/static/: app.js  corridor.css  priority.html  style.css
backend/app/templates/: corridor.html  dashboard.html
backend/tests/: conftest.py  test_alert_engine.py  test_classifier.py  test_hydration_record.py  test_integration.py  test_led_controller.py  test_observation_button.py  test_session_manager.py
db/: init.sql
firmware/: ble_transport.py  calibrate.py  hx711.py  main.py  secrets.py
measurment/: test.py
protocal/: event_codec.py  framing.py
protocol/: __init__.py
sample_records/: ward-4-bed-7.jsonl
scripts/: camgenium_token.py  fake_device.py  seed.py  (+3 more)
(+10 files in other folders)
